<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/recording_player_layout" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<Button android:id="@+id/recording_player_btn_play" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/recording_player_btn_play" />
	<Button android:id="@+id/recording_player_btn_stop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/recording_player_btn_stop" />
	<Button android:id="@+id/recording_player_btn_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/recording_player_btn_close" />
</LinearLayout>
